--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   "homepage": "https://github.com/vipinsingh211/notedown#readme",
   "dependencies": {
     "compression": "^1.7.4",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "helmet": "^4.6.0"
+    "express-validator": "^6.11.1",
+    "helmet": "^4.6.0",
+    "sqlite3": "^5.0.2",
+    "uuid": "^8.3.2"
   }
 }
