--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "express": "^4.17.1",
     "express-validator": "^6.11.1",
     "helmet": "^4.6.0",
+    "lodash": "^4.17.21",
     "sqlite3": "^5.0.2",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "jest": "^27.2.4"
   }
 }
