--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
+  "type": "module",
   "name": "notedown",
   "version": "1.0.0",
   "description": "A notes app based on Markdown",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon --experimental-modules --es-module-specifier-resolution=node index.js"
   },
   "repository": {
     "type": "git",
@@ -28,6 +30,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "eslint": "^8.0.1",
     "jest": "^27.2.4"
   }
 }
