--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "The Markdown based Note app",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "nodemon": "nodemon --watch main.js --watch main.css --watch preload.js --watch index.html --exec npm start"
+    "debug": "electron --inspect main.js",
+    "nodemon": "nodemon --watch index.html --exec npm run debug"
   },
   "repository": {
     "type": "git",
@@ -27,11 +28,15 @@
     "@electron-forge/maker-squirrel": "^7.2.0",
     "@electron-forge/maker-zip": "^7.2.0",
     "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
-    "electron": "^28.1.3"
+    "electron": "^28.1.3",
+    "jest": "^29.7.0"
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "bootstrap-icons": "^1.11.3",
+    "dompurify": "^3.0.8",
     "electron-squirrel-startup": "^1.0.0",
+    "jsdom": "^23.2.0",
     "marked": "^11.1.1"
   }
 }
