setup at app start

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,38 +1,35 @@
 {
     "version": "0.2.0",
-    "compounds": [
-        {
-            "name": "Main + renderer",
-            "configurations": [
-                "Main",
-                "Renderer"
-            ],
-            "stopAll": true
-        }
-    ],
     "configurations": [
         {
-            "name": "Renderer",
-            "port": 9222,
-            "request": "attach",
-            "type": "chrome",
-            "webRoot": "${workspaceFolder}"
-        },
-        {
-            "name": "Main",
             "type": "node",
             "request": "launch",
-            "cwd": "${workspaceFolder}",
+            "name": "Electron: Main",
             "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron",
+            "runtimeArgs": [
+                "--remote-debugging-port=9223",
+                "."
+            ],
             "windows": {
                 "runtimeExecutable": "${workspaceFolder}/node_modules/.bin/electron.cmd"
-            },
-            "args": [
-                ".",
-                "--remote-debugging-port=9222"
-            ],
-            "outputCapture": "std",
-            "console": "integratedTerminal"
+            }
+        },
+        {
+            "name": "Electron: Renderer",
+            "type": "chrome",
+            "request": "attach",
+            "port": 9223,
+            "webRoot": "${workspaceFolder}",
+            "timeout": 30000
+        }
+    ],
+    "compounds": [
+        {
+            "name": "Electron: All",
+            "configurations": [
+                "Electron: Main",
+                "Electron: Renderer"
+            ]
         }
     ]
 }
