--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
-    "debug": "electron --inspect main.js",
+    "debug": "electron --inspect=9229 main.js",
+    "rebuild": "electron-rebuild",
     "nodemon": "nodemon --watch index.html --exec npm run debug"
   },
   "repository": {
@@ -29,14 +30,15 @@
     "@electron-forge/maker-zip": "^7.2.0",
     "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
     "electron": "^28.1.3",
+    "electron-rebuild": "^3.2.9",
     "jest": "^29.7.0"
   },
   "dependencies": {
+    "better-sqlite3": "^9.3.0",
     "bootstrap": "^5.3.2",
-    "bootstrap-icons": "^1.11.3",
     "dompurify": "^3.0.8",
     "electron-squirrel-startup": "^1.0.0",
     "jsdom": "^23.2.0",
-    "marked": "^11.1.1"
+    "markdown-it": "^14.0.0"
   }
 }
