--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,7 @@
 {
     "compilerOptions": {
         "checkJs": true,
-        "strict": true,
-        "module": "es2015"
+        "strict": true
     },
     "exclude": [
         "node_modules"
