--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bootstrap": "^5.3.2",
     "dompurify": "^3.0.8",
     "electron-squirrel-startup": "^1.0.0",
+    "jquery": "^3.7.1",
     "jsdom": "^23.2.0",
     "markdown-it": "^14.0.0"
   }
