--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
     "electron": "^28.1.3",
     "electron-rebuild": "^3.2.9",
+    "eslint": "^8.56.0",
     "jest": "^29.7.0"
   },
   "dependencies": {
